# NotPetyaAgain_Decryptor

./: Cargo.toml  Dockerfile  bob.hex
src/: index.html  main.rs
