[package]
name = "notpetyaagain_decryptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x25519-dalek = { version = "2.0.0-pre.1", default-features = false, features = ["u64_backend"] }
hex = { version = "0.4", default-features = false }
axum = "0.4.8"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
tokio = { version = "1.17.0", features = ["full"] }
regex = "1.5.5"
base64 = "0.13.0"